--- a/package.json
+++ b/package.json
@@ -11,9 +11,23 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "precommit": "run-s format:fix lint",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts ",
+    "format:fix": "pretty-quick --staged",
+    "format:check": "prettier --config ./.prettierrc --list-different \"./**/*{.ts,.js,.json,.css,.scss}\"",
+    "format:all": "prettier --config ./.prettierrc --write \"./**/*{.ts,.js,.jsx,.tsx,.json,.css,.scss}\"",
+    "prepare": "husky install"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.8.8",
+    "pretty-quick": "^3.1.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   },
