--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": {
     "name": "Anand Raja"
   },
+  "homepage": "http://actionanand.github.io/js-helper-code",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,6 +18,8 @@
     "format:fix": "pretty-quick --staged",
     "format:check": "prettier --config ./.prettierrc --list-different \"./**/*{.ts,.js,.json,.css,.scss}\"",
     "format:all": "prettier --config ./.prettierrc --write \"./**/*{.ts,.js,.jsx,.tsx,.json,.css,.scss}\"",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -24,6 +27,7 @@
     "@typescript-eslint/parser": "^5.59.7",
     "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
+    "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
