--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base=/js-helper-code/",
     "preview": "vite preview",
     "precommit": "run-s format:fix lint",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts ",
